--- a/.gitignore
+++ b/.gitignore
@@ -61,9 +61,9 @@ Temporary Items
 !/modules/node_helper/**
 
 # Ignore all modules except the default modules.
-#/modules/**
-#!/modules/default
-#!/modules/default/**
+/modules/**
+!/modules/default
+!/modules/default/**
 !/modules/README.md**
 
 # Ignore changes to the custom css files.
