--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "iconv-lite": "latest",
     "mocha-logger": "^1.0.5",
     "moment": "latest",
+    "npm": "^6.1.0",
     "request": "^2.83.0",
     "rrule-alt": "^2.2.7",
     "simple-git": "^1.85.0",
